# adventofcode

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
elixir/: mix.exs
elixir/lib/year_2025/day_01/: part_01.ex  part_02.ex
elixir/lib/year_2025/day_02/: part_01.ex  part_02.ex
elixir/lib/year_2025/day_03/: part_01.ex  part_02.ex
elixir/lib/year_2025/day_04/: part_01.ex  part_02.ex
elixir/lib/year_2025/day_05/: part_01.ex
elixir/lib/year_2025/day_06/: part_01.ex
elixir/lib/year_2025/day_07/: part_01.ex
elixir/lib/year_2025/day_08/: part_01.ex  part_02.ex
elixir/lib/year_2025/day_09/: part_01.ex
elixir/lib/year_2025/day_10/: part_01.ex
elixir/lib/year_2025/day_11/: part_01.ex
elixir/lib/year_2025/day_12/: part_01.ex
python/: pyproject.toml
python/src/day_04/: main.py
python/src/day_11/: main.py
python/src/day_14/: main.py
python/src/day_18/: main.py
python/src/day_19/: main.py
python/src/day_22/: main.py
python/src/day_24/: main.py
python/src/day_25/: main.py
python/src/year_2024/: conftest.py
python/src/year_2024/day_01/: part_01.py  part_02.py
python/src/year_2024/day_02/: part_01.py  part_02.py
python/src/year_2024/day_03/: part_01.py  part_02.py
python/src/year_2024/day_04/: part_01.py  part_02.py
python/src/year_2024/day_05/: part_01.py  part_02.py
python/src/year_2024/day_06/: part_01.py
python/src/year_2024/day_07/: part_01.py  part_02.py
python/src/year_2024/day_08/: part_01.py  part_02.py
python/src/year_2024/day_09/: part_01.py  part_02.py
python/src/year_2024/day_10/: part_01.py  part_02.py
python/src/year_2024/day_11/: part_01.py  part_02.py
python/src/year_2024/day_12/: part_01.py
python/src/year_2024/day_13/: part_01.py  part_02.py
python/src/year_2024/day_14/: part_01.py  part_02.py
python/src/year_2024/day_15/: part_01.py
python/src/year_2024/day_16/: part_01.py
python/src/year_2024/day_17/: part_01.py
python/src/year_2024/day_18/: part_01.py
python/src/year_2024/day_19/: part_01.py  part_02.py
python/src/year_2024/day_20/: part_01.py  part_02.py
python/src/year_2024/day_22/: part_01.py
python/src/year_2024/day_23/: part_01.py  part_02.py
python/src/year_2024/day_24/: part_01.py
python/src/year_2024/day_25/: part_01.py
src/day_02/: main.py
src/day_03/: main.py
src/day_04/: main.py
src/day_05/: main.py
src/day_07/: main.py
src/day_09/: main.py
src/day_1/: main.py
src/day_10/: main.py
src/day_11/: main.py
src/day_12/: main.py
src/day_13/: main.py
src/day_14/: main.py
src/day_15/: main.py
src/day_16/: main.py
src/day_17/: main.py
src/day_18/: main.py
src/day_19/: main.py
src/day_2/: main.py
src/day_20/: main.py
src/day_23/: main.py
src/day_3/: main.py
src/day_4/: main.py
src/day_5/: main.py
src/day_6/: main.py
src/day_7/: main.py
src/day_8/: main.py
src/day_9/: main.py
