[project]
name = "adventofcode"
description = "adventofcode"
version = "0.0.0"
license = { text = "MIT" }
authors = [{ name = "Volodymyr Pivoshenko", email = "contact@pivoshenko.dev" }]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["ipdb~=0.13.13", "ipython~=9.14.0", "watchdog~=6.0.0"]
formatters = ["pyupgrade~=3.21.2", "ruff~=0.15.15"]
linters = ["ruff~=0.15.15", "ty~=0.0.40"]
tests = ["pytest~=9.0.3", "pytest-mock~=3.15.1", "pytest-sugar~=1.1.1", "pytest-watcher~=0.6.3"]

[tool.pytest.ini_options]
addopts = ["--color=yes", "--import-mode=importlib", "-l", "-rx", "-vv"]
python_files = ["main.py", "part_01.py", "part_02.py"]
python_functions = "test_*"
testpaths = ["."]

[tool.ruff]
fix = true
line-length = 100
unsafe-fixes = true
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint.isort]
force-single-line = true
from-first = false
length-sort-straight = true
lines-after-imports = 2
lines-between-types = 1
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint]
ignore = ["B023", "D103", "D203", "D213", "COM812", "FIX", "I001", "INP001", "PLR2004", "S101", "T201", "TD"]
select = ["ALL"]
